// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Tooltip/Tooltip should render an open tooltip at bottom 1`] = `
".a {
  border-top-left-radius: 4px;
}
.b {
  border-top-right-radius: 0;
}
.c {
  border-bottom-right-radius: 0;
}
.d {
  border-bottom-left-radius: 4px;
}
.e {
  padding-top: 6px;
}
.f {
  padding-bottom: 6px;
}
.g {
  padding-left: 12px;
}
.h {
  padding-right: 12px;
}
.i {
  background-color: #6c757d;
}
.j {
  background-image: none;
}
.k {
  color: #fff;
}
.l {
  cursor: pointer;
}
.m {
  display: inline-block;
}
.n {
  font-size: 14px;
}
.o {
  font-weight: 400;
}
.p {
  line-height: 1.42857143;
}
.q {
  margin-bottom: 0;
}
.r {
  text-align: center;
}
.s {
  touch-action: manipulation;
}
.t {
  white-space: nowrap;
}
.u {
  vertical-align: middle;
}
.v {
  user-select: none;
}
.ah:disabled {
  background-color: #6c757d;
}
.ai:disabled {
  color: #fff;
}
.aj:disabled {
  box-shadow: none;
}
.ak:disabled {
  cursor: not-allowed;
}
.al:disabled {
  filter: alpha(opacity=65);
}
.am:disabled {
  opacity: 0.65;
}
.an:disabled {
  pointer-events: none;
}
.ao:disabled {
  border-top-color: #6c757d;
}
.ap:disabled {
  border-right-color: #6c757d;
}
.aq:disabled {
  border-bottom-color: #6c757d;
}
.ar:disabled {
  border-left-color: #6c757d;
}
.bg {
  border-top-width: 1px;
}
.bh {
  border-right-width: 1px;
}
.bi {
  border-bottom-width: 1px;
}
.bj {
  border-left-width: 1px;
}
.bk {
  border-top-style: solid;
}
.bl {
  border-right-style: solid;
}
.bm {
  border-bottom-style: solid;
}
.bn {
  border-left-style: solid;
}
.bo {
  border-top-color: #6c757d;
}
.bp {
  border-right-color: #6c757d;
}
.bq {
  border-bottom-color: #6c757d;
}
.br {
  border-left-color: #6c757d;
}
.bs {
  z-index: 1080;
}
.bt {
  display: block;
}
.bu {
  font-family:
    system-ui,
    -apple-system,
    "Segoe UI",
    Roboto,
    "Helvetica Neue",
    "Noto Sans",
    "Liberation Sans",
    Arial,
    sans-serif,
    "Apple Color Emoji",
    "Segoe UI Emoji",
    "Segoe UI Symbol",
    "Noto Color Emoji";
}
.bv {
  font-style: normal;
}
.bw {
  line-height: 1.5;
}
.bx {
  text-align: start;
}
.by {
  text-shadow: none;
}
.bz {
  text-transform: none;
}
.ca {
  letter-spacing: normal;
}
.cb {
  word-break: normal;
}
.cc {
  white-space: normal;
}
.cd {
  word-spacing: normal;
}
.ce {
  line-break: auto;
}
.cf {
  font-size: 0.875rem;
}
.cg {
  word-wrap: break-word;
}
.ch {
  opacity: 0.9;
}
.ci {
  text-decoration-line: none;
}
.cj {
  max-width: 200px;
}
.ck {
  background-color: #000;
}
.cl {
  border-top-left-radius: 0.375rem;
}
.cm {
  border-top-right-radius: 0.375rem;
}
.cn {
  border-bottom-right-radius: 0.375rem;
}
.co {
  border-bottom-left-radius: 0.375rem;
}
.cp {
  padding-top: 0.25rem;
}
.cq {
  padding-right: 0.5rem;
}
.cr {
  padding-bottom: 0.25rem;
}
.cs {
  padding-left: 0.5rem;
}
.ba:hover {
  background-color: #5c636a;
}
.bb:hover {
  color: #fff;
}
.bc:hover {
  border-top-color: #565e64;
}
.bd:hover {
  border-right-color: #565e64;
}
.be:hover {
  border-bottom-color: #565e64;
}
.bf:hover {
  border-left-color: #565e64;
}
.as:focus-visible {
  color: #fff;
}
.at:focus-visible {
  background-color: #5c636a;
}
.au:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
}
.av:focus-visible {
  outline-width: 0;
}
.aw:focus-visible {
  border-top-color: #565e64;
}
.ax:focus-visible {
  border-right-color: #565e64;
}
.ay:focus-visible {
  border-bottom-color: #565e64;
}
.az:focus-visible {
  border-left-color: #565e64;
}
.w:active {
  color: #fff;
}
.x:active {
  background-color: #565e64;
}
.y:active {
  background-image: none;
}
.z:active {
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
}
.ab:active {
  outline-width: 0;
}
.ac:active {
  border-top-color: #51585e;
}
.ae:active {
  border-right-color: #51585e;
}
.af:active {
  border-bottom-color: #51585e;
}
.ag:active {
  border-left-color: #51585e;
}


<div data-testid="tooltip-trigger" aria-describedby=":R1:">
  <button
    data-testid="button"
    class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br c d e f g h i j k l m n o p q r s t u v w x y z"
  >
    Tooltip
  </button>
</div>
<div
  data-testid="tooltip-content"
  class="bs bt bu bv bw bx by bz ca cb cc cd ce cf cg ch ci o"
  style="position: absolute; left: 0; top: 0"
  tabindex="-1"
  id=":R1:"
  role="tooltip"
>
  <div
    data-testid="tooltip-content-inner"
    style="transform-origin: 7.5px -7.5px; transform: scale(0); opacity: 0"
    class="cj ck cl cm cn co cp cq cr cs k r floating"
  >
    This is the default tooltip
  </div>
</div>
;
"
`;

exports[`components/Tooltip/Tooltip should render an open tooltip at left 1`] = `
".a {
  border-top-left-radius: 4px;
}
.b {
  border-top-right-radius: 0;
}
.c {
  border-bottom-right-radius: 0;
}
.d {
  border-bottom-left-radius: 4px;
}
.e {
  padding-top: 6px;
}
.f {
  padding-bottom: 6px;
}
.g {
  padding-left: 12px;
}
.h {
  padding-right: 12px;
}
.i {
  background-color: #6c757d;
}
.j {
  background-image: none;
}
.k {
  color: #fff;
}
.l {
  cursor: pointer;
}
.m {
  display: inline-block;
}
.n {
  font-size: 14px;
}
.o {
  font-weight: 400;
}
.p {
  line-height: 1.42857143;
}
.q {
  margin-bottom: 0;
}
.r {
  text-align: center;
}
.s {
  touch-action: manipulation;
}
.t {
  white-space: nowrap;
}
.u {
  vertical-align: middle;
}
.v {
  user-select: none;
}
.ah:disabled {
  background-color: #6c757d;
}
.ai:disabled {
  color: #fff;
}
.aj:disabled {
  box-shadow: none;
}
.ak:disabled {
  cursor: not-allowed;
}
.al:disabled {
  filter: alpha(opacity=65);
}
.am:disabled {
  opacity: 0.65;
}
.an:disabled {
  pointer-events: none;
}
.ao:disabled {
  border-top-color: #6c757d;
}
.ap:disabled {
  border-right-color: #6c757d;
}
.aq:disabled {
  border-bottom-color: #6c757d;
}
.ar:disabled {
  border-left-color: #6c757d;
}
.bg {
  border-top-width: 1px;
}
.bh {
  border-right-width: 1px;
}
.bi {
  border-bottom-width: 1px;
}
.bj {
  border-left-width: 1px;
}
.bk {
  border-top-style: solid;
}
.bl {
  border-right-style: solid;
}
.bm {
  border-bottom-style: solid;
}
.bn {
  border-left-style: solid;
}
.bo {
  border-top-color: #6c757d;
}
.bp {
  border-right-color: #6c757d;
}
.bq {
  border-bottom-color: #6c757d;
}
.br {
  border-left-color: #6c757d;
}
.bs {
  z-index: 1080;
}
.bt {
  display: block;
}
.bu {
  font-family:
    system-ui,
    -apple-system,
    "Segoe UI",
    Roboto,
    "Helvetica Neue",
    "Noto Sans",
    "Liberation Sans",
    Arial,
    sans-serif,
    "Apple Color Emoji",
    "Segoe UI Emoji",
    "Segoe UI Symbol",
    "Noto Color Emoji";
}
.bv {
  font-style: normal;
}
.bw {
  line-height: 1.5;
}
.bx {
  text-align: start;
}
.by {
  text-shadow: none;
}
.bz {
  text-transform: none;
}
.ca {
  letter-spacing: normal;
}
.cb {
  word-break: normal;
}
.cc {
  white-space: normal;
}
.cd {
  word-spacing: normal;
}
.ce {
  line-break: auto;
}
.cf {
  font-size: 0.875rem;
}
.cg {
  word-wrap: break-word;
}
.ch {
  opacity: 0.9;
}
.ci {
  text-decoration-line: none;
}
.cj {
  max-width: 200px;
}
.ck {
  background-color: #000;
}
.cl {
  border-top-left-radius: 0.375rem;
}
.cm {
  border-top-right-radius: 0.375rem;
}
.cn {
  border-bottom-right-radius: 0.375rem;
}
.co {
  border-bottom-left-radius: 0.375rem;
}
.cp {
  padding-top: 0.25rem;
}
.cq {
  padding-right: 0.5rem;
}
.cr {
  padding-bottom: 0.25rem;
}
.cs {
  padding-left: 0.5rem;
}
.ba:hover {
  background-color: #5c636a;
}
.bb:hover {
  color: #fff;
}
.bc:hover {
  border-top-color: #565e64;
}
.bd:hover {
  border-right-color: #565e64;
}
.be:hover {
  border-bottom-color: #565e64;
}
.bf:hover {
  border-left-color: #565e64;
}
.as:focus-visible {
  color: #fff;
}
.at:focus-visible {
  background-color: #5c636a;
}
.au:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
}
.av:focus-visible {
  outline-width: 0;
}
.aw:focus-visible {
  border-top-color: #565e64;
}
.ax:focus-visible {
  border-right-color: #565e64;
}
.ay:focus-visible {
  border-bottom-color: #565e64;
}
.az:focus-visible {
  border-left-color: #565e64;
}
.w:active {
  color: #fff;
}
.x:active {
  background-color: #565e64;
}
.y:active {
  background-image: none;
}
.z:active {
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
}
.ab:active {
  outline-width: 0;
}
.ac:active {
  border-top-color: #51585e;
}
.ae:active {
  border-right-color: #51585e;
}
.af:active {
  border-bottom-color: #51585e;
}
.ag:active {
  border-left-color: #51585e;
}


<div data-testid="tooltip-trigger" aria-describedby=":R1:">
  <button
    data-testid="button"
    class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br c d e f g h i j k l m n o p q r s t u v w x y z"
  >
    Tooltip
  </button>
</div>
<div
  data-testid="tooltip-content"
  class="bs bt bu bv bw bx by bz ca cb cc cd ce cf cg ch ci o"
  style="position: absolute; left: 0; top: 0"
  tabindex="-1"
  id=":R1:"
  role="tooltip"
>
  <div
    data-testid="tooltip-content-inner"
    style="
      transform-origin: calc(100% + 7.5px) 7.5px;
      transform: scale(0);
      opacity: 0;
    "
    class="cj ck cl cm cn co cp cq cr cs k r floating"
  >
    This is the default tooltip
  </div>
</div>
;
"
`;

exports[`components/Tooltip/Tooltip should render an open tooltip at right 1`] = `
".a {
  border-top-left-radius: 4px;
}
.b {
  border-top-right-radius: 0;
}
.c {
  border-bottom-right-radius: 0;
}
.d {
  border-bottom-left-radius: 4px;
}
.e {
  padding-top: 6px;
}
.f {
  padding-bottom: 6px;
}
.g {
  padding-left: 12px;
}
.h {
  padding-right: 12px;
}
.i {
  background-color: #6c757d;
}
.j {
  background-image: none;
}
.k {
  color: #fff;
}
.l {
  cursor: pointer;
}
.m {
  display: inline-block;
}
.n {
  font-size: 14px;
}
.o {
  font-weight: 400;
}
.p {
  line-height: 1.42857143;
}
.q {
  margin-bottom: 0;
}
.r {
  text-align: center;
}
.s {
  touch-action: manipulation;
}
.t {
  white-space: nowrap;
}
.u {
  vertical-align: middle;
}
.v {
  user-select: none;
}
.ah:disabled {
  background-color: #6c757d;
}
.ai:disabled {
  color: #fff;
}
.aj:disabled {
  box-shadow: none;
}
.ak:disabled {
  cursor: not-allowed;
}
.al:disabled {
  filter: alpha(opacity=65);
}
.am:disabled {
  opacity: 0.65;
}
.an:disabled {
  pointer-events: none;
}
.ao:disabled {
  border-top-color: #6c757d;
}
.ap:disabled {
  border-right-color: #6c757d;
}
.aq:disabled {
  border-bottom-color: #6c757d;
}
.ar:disabled {
  border-left-color: #6c757d;
}
.bg {
  border-top-width: 1px;
}
.bh {
  border-right-width: 1px;
}
.bi {
  border-bottom-width: 1px;
}
.bj {
  border-left-width: 1px;
}
.bk {
  border-top-style: solid;
}
.bl {
  border-right-style: solid;
}
.bm {
  border-bottom-style: solid;
}
.bn {
  border-left-style: solid;
}
.bo {
  border-top-color: #6c757d;
}
.bp {
  border-right-color: #6c757d;
}
.bq {
  border-bottom-color: #6c757d;
}
.br {
  border-left-color: #6c757d;
}
.bs {
  z-index: 1080;
}
.bt {
  display: block;
}
.bu {
  font-family:
    system-ui,
    -apple-system,
    "Segoe UI",
    Roboto,
    "Helvetica Neue",
    "Noto Sans",
    "Liberation Sans",
    Arial,
    sans-serif,
    "Apple Color Emoji",
    "Segoe UI Emoji",
    "Segoe UI Symbol",
    "Noto Color Emoji";
}
.bv {
  font-style: normal;
}
.bw {
  line-height: 1.5;
}
.bx {
  text-align: start;
}
.by {
  text-shadow: none;
}
.bz {
  text-transform: none;
}
.ca {
  letter-spacing: normal;
}
.cb {
  word-break: normal;
}
.cc {
  white-space: normal;
}
.cd {
  word-spacing: normal;
}
.ce {
  line-break: auto;
}
.cf {
  font-size: 0.875rem;
}
.cg {
  word-wrap: break-word;
}
.ch {
  opacity: 0.9;
}
.ci {
  text-decoration-line: none;
}
.cj {
  max-width: 200px;
}
.ck {
  background-color: #000;
}
.cl {
  border-top-left-radius: 0.375rem;
}
.cm {
  border-top-right-radius: 0.375rem;
}
.cn {
  border-bottom-right-radius: 0.375rem;
}
.co {
  border-bottom-left-radius: 0.375rem;
}
.cp {
  padding-top: 0.25rem;
}
.cq {
  padding-right: 0.5rem;
}
.cr {
  padding-bottom: 0.25rem;
}
.cs {
  padding-left: 0.5rem;
}
.ba:hover {
  background-color: #5c636a;
}
.bb:hover {
  color: #fff;
}
.bc:hover {
  border-top-color: #565e64;
}
.bd:hover {
  border-right-color: #565e64;
}
.be:hover {
  border-bottom-color: #565e64;
}
.bf:hover {
  border-left-color: #565e64;
}
.as:focus-visible {
  color: #fff;
}
.at:focus-visible {
  background-color: #5c636a;
}
.au:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
}
.av:focus-visible {
  outline-width: 0;
}
.aw:focus-visible {
  border-top-color: #565e64;
}
.ax:focus-visible {
  border-right-color: #565e64;
}
.ay:focus-visible {
  border-bottom-color: #565e64;
}
.az:focus-visible {
  border-left-color: #565e64;
}
.w:active {
  color: #fff;
}
.x:active {
  background-color: #565e64;
}
.y:active {
  background-image: none;
}
.z:active {
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
}
.ab:active {
  outline-width: 0;
}
.ac:active {
  border-top-color: #51585e;
}
.ae:active {
  border-right-color: #51585e;
}
.af:active {
  border-bottom-color: #51585e;
}
.ag:active {
  border-left-color: #51585e;
}


<div data-testid="tooltip-trigger" aria-describedby=":R1:">
  <button
    data-testid="button"
    class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br c d e f g h i j k l m n o p q r s t u v w x y z"
  >
    Tooltip
  </button>
</div>
<div
  data-testid="tooltip-content"
  class="bs bt bu bv bw bx by bz ca cb cc cd ce cf cg ch ci o"
  style="position: absolute; left: 0; top: 0"
  tabindex="-1"
  id=":R1:"
  role="tooltip"
>
  <div
    data-testid="tooltip-content-inner"
    style="transform-origin: -7.5px 7.5px; transform: scale(0); opacity: 0"
    class="cj ck cl cm cn co cp cq cr cs k r floating"
  >
    This is the default tooltip
  </div>
</div>
;
"
`;

exports[`components/Tooltip/Tooltip should render an open tooltip at top 1`] = `
".a {
  border-top-left-radius: 4px;
}
.b {
  border-top-right-radius: 0;
}
.c {
  border-bottom-right-radius: 0;
}
.d {
  border-bottom-left-radius: 4px;
}
.e {
  padding-top: 6px;
}
.f {
  padding-bottom: 6px;
}
.g {
  padding-left: 12px;
}
.h {
  padding-right: 12px;
}
.i {
  background-color: #6c757d;
}
.j {
  background-image: none;
}
.k {
  color: #fff;
}
.l {
  cursor: pointer;
}
.m {
  display: inline-block;
}
.n {
  font-size: 14px;
}
.o {
  font-weight: 400;
}
.p {
  line-height: 1.42857143;
}
.q {
  margin-bottom: 0;
}
.r {
  text-align: center;
}
.s {
  touch-action: manipulation;
}
.t {
  white-space: nowrap;
}
.u {
  vertical-align: middle;
}
.v {
  user-select: none;
}
.ah:disabled {
  background-color: #6c757d;
}
.ai:disabled {
  color: #fff;
}
.aj:disabled {
  box-shadow: none;
}
.ak:disabled {
  cursor: not-allowed;
}
.al:disabled {
  filter: alpha(opacity=65);
}
.am:disabled {
  opacity: 0.65;
}
.an:disabled {
  pointer-events: none;
}
.ao:disabled {
  border-top-color: #6c757d;
}
.ap:disabled {
  border-right-color: #6c757d;
}
.aq:disabled {
  border-bottom-color: #6c757d;
}
.ar:disabled {
  border-left-color: #6c757d;
}
.bg {
  border-top-width: 1px;
}
.bh {
  border-right-width: 1px;
}
.bi {
  border-bottom-width: 1px;
}
.bj {
  border-left-width: 1px;
}
.bk {
  border-top-style: solid;
}
.bl {
  border-right-style: solid;
}
.bm {
  border-bottom-style: solid;
}
.bn {
  border-left-style: solid;
}
.bo {
  border-top-color: #6c757d;
}
.bp {
  border-right-color: #6c757d;
}
.bq {
  border-bottom-color: #6c757d;
}
.br {
  border-left-color: #6c757d;
}
.bs {
  z-index: 1080;
}
.bt {
  display: block;
}
.bu {
  font-family:
    system-ui,
    -apple-system,
    "Segoe UI",
    Roboto,
    "Helvetica Neue",
    "Noto Sans",
    "Liberation Sans",
    Arial,
    sans-serif,
    "Apple Color Emoji",
    "Segoe UI Emoji",
    "Segoe UI Symbol",
    "Noto Color Emoji";
}
.bv {
  font-style: normal;
}
.bw {
  line-height: 1.5;
}
.bx {
  text-align: start;
}
.by {
  text-shadow: none;
}
.bz {
  text-transform: none;
}
.ca {
  letter-spacing: normal;
}
.cb {
  word-break: normal;
}
.cc {
  white-space: normal;
}
.cd {
  word-spacing: normal;
}
.ce {
  line-break: auto;
}
.cf {
  font-size: 0.875rem;
}
.cg {
  word-wrap: break-word;
}
.ch {
  opacity: 0.9;
}
.ci {
  text-decoration-line: none;
}
.cj {
  max-width: 200px;
}
.ck {
  background-color: #000;
}
.cl {
  border-top-left-radius: 0.375rem;
}
.cm {
  border-top-right-radius: 0.375rem;
}
.cn {
  border-bottom-right-radius: 0.375rem;
}
.co {
  border-bottom-left-radius: 0.375rem;
}
.cp {
  padding-top: 0.25rem;
}
.cq {
  padding-right: 0.5rem;
}
.cr {
  padding-bottom: 0.25rem;
}
.cs {
  padding-left: 0.5rem;
}
.ba:hover {
  background-color: #5c636a;
}
.bb:hover {
  color: #fff;
}
.bc:hover {
  border-top-color: #565e64;
}
.bd:hover {
  border-right-color: #565e64;
}
.be:hover {
  border-bottom-color: #565e64;
}
.bf:hover {
  border-left-color: #565e64;
}
.as:focus-visible {
  color: #fff;
}
.at:focus-visible {
  background-color: #5c636a;
}
.au:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
}
.av:focus-visible {
  outline-width: 0;
}
.aw:focus-visible {
  border-top-color: #565e64;
}
.ax:focus-visible {
  border-right-color: #565e64;
}
.ay:focus-visible {
  border-bottom-color: #565e64;
}
.az:focus-visible {
  border-left-color: #565e64;
}
.w:active {
  color: #fff;
}
.x:active {
  background-color: #565e64;
}
.y:active {
  background-image: none;
}
.z:active {
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
}
.ab:active {
  outline-width: 0;
}
.ac:active {
  border-top-color: #51585e;
}
.ae:active {
  border-right-color: #51585e;
}
.af:active {
  border-bottom-color: #51585e;
}
.ag:active {
  border-left-color: #51585e;
}


<div data-testid="tooltip-trigger" aria-describedby=":R1:">
  <button
    data-testid="button"
    class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br c d e f g h i j k l m n o p q r s t u v w x y z"
  >
    Tooltip
  </button>
</div>
<div
  data-testid="tooltip-content"
  class="bs bt bu bv bw bx by bz ca cb cc cd ce cf cg ch ci o"
  style="position: absolute; left: 0; top: 0"
  tabindex="-1"
  id=":R1:"
  role="tooltip"
>
  <div
    data-testid="tooltip-content-inner"
    style="
      transform-origin: 7.5px calc(100% + 7.5px);
      transform: scale(0);
      opacity: 0;
    "
    class="cj ck cl cm cn co cp cq cr cs k r floating"
  >
    This is the default tooltip
  </div>
</div>
;
"
`;

exports[`components/Tooltip/Tooltip should render an tooltip at bottom 1`] = `
".a {
  border-top-left-radius: 4px;
}
.b {
  border-top-right-radius: 0;
}
.c {
  border-bottom-right-radius: 0;
}
.d {
  border-bottom-left-radius: 4px;
}
.e {
  padding-top: 6px;
}
.f {
  padding-bottom: 6px;
}
.g {
  padding-left: 12px;
}
.h {
  padding-right: 12px;
}
.i {
  background-color: #6c757d;
}
.j {
  background-image: none;
}
.k {
  color: #fff;
}
.l {
  cursor: pointer;
}
.m {
  display: inline-block;
}
.n {
  font-size: 14px;
}
.o {
  font-weight: 400;
}
.p {
  line-height: 1.42857143;
}
.q {
  margin-bottom: 0;
}
.r {
  text-align: center;
}
.s {
  touch-action: manipulation;
}
.t {
  white-space: nowrap;
}
.u {
  vertical-align: middle;
}
.v {
  user-select: none;
}
.ah:disabled {
  background-color: #6c757d;
}
.ai:disabled {
  color: #fff;
}
.aj:disabled {
  box-shadow: none;
}
.ak:disabled {
  cursor: not-allowed;
}
.al:disabled {
  filter: alpha(opacity=65);
}
.am:disabled {
  opacity: 0.65;
}
.an:disabled {
  pointer-events: none;
}
.ao:disabled {
  border-top-color: #6c757d;
}
.ap:disabled {
  border-right-color: #6c757d;
}
.aq:disabled {
  border-bottom-color: #6c757d;
}
.ar:disabled {
  border-left-color: #6c757d;
}
.bg {
  border-top-width: 1px;
}
.bh {
  border-right-width: 1px;
}
.bi {
  border-bottom-width: 1px;
}
.bj {
  border-left-width: 1px;
}
.bk {
  border-top-style: solid;
}
.bl {
  border-right-style: solid;
}
.bm {
  border-bottom-style: solid;
}
.bn {
  border-left-style: solid;
}
.bo {
  border-top-color: #6c757d;
}
.bp {
  border-right-color: #6c757d;
}
.bq {
  border-bottom-color: #6c757d;
}
.br {
  border-left-color: #6c757d;
}
.ba:hover {
  background-color: #5c636a;
}
.bb:hover {
  color: #fff;
}
.bc:hover {
  border-top-color: #565e64;
}
.bd:hover {
  border-right-color: #565e64;
}
.be:hover {
  border-bottom-color: #565e64;
}
.bf:hover {
  border-left-color: #565e64;
}
.as:focus-visible {
  color: #fff;
}
.at:focus-visible {
  background-color: #5c636a;
}
.au:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
}
.av:focus-visible {
  outline-width: 0;
}
.aw:focus-visible {
  border-top-color: #565e64;
}
.ax:focus-visible {
  border-right-color: #565e64;
}
.ay:focus-visible {
  border-bottom-color: #565e64;
}
.az:focus-visible {
  border-left-color: #565e64;
}
.w:active {
  color: #fff;
}
.x:active {
  background-color: #565e64;
}
.y:active {
  background-image: none;
}
.z:active {
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
}
.ab:active {
  outline-width: 0;
}
.ac:active {
  border-top-color: #51585e;
}
.ae:active {
  border-right-color: #51585e;
}
.af:active {
  border-bottom-color: #51585e;
}
.ag:active {
  border-left-color: #51585e;
}


<div data-testid="tooltip-trigger">
  <button
    data-testid="button"
    class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br c d e f g h i j k l m n o p q r s t u v w x y z"
  >
    Tooltip
  </button>
</div>
;
"
`;

exports[`components/Tooltip/Tooltip should render an tooltip at left 1`] = `
".a {
  border-top-left-radius: 4px;
}
.b {
  border-top-right-radius: 0;
}
.c {
  border-bottom-right-radius: 0;
}
.d {
  border-bottom-left-radius: 4px;
}
.e {
  padding-top: 6px;
}
.f {
  padding-bottom: 6px;
}
.g {
  padding-left: 12px;
}
.h {
  padding-right: 12px;
}
.i {
  background-color: #6c757d;
}
.j {
  background-image: none;
}
.k {
  color: #fff;
}
.l {
  cursor: pointer;
}
.m {
  display: inline-block;
}
.n {
  font-size: 14px;
}
.o {
  font-weight: 400;
}
.p {
  line-height: 1.42857143;
}
.q {
  margin-bottom: 0;
}
.r {
  text-align: center;
}
.s {
  touch-action: manipulation;
}
.t {
  white-space: nowrap;
}
.u {
  vertical-align: middle;
}
.v {
  user-select: none;
}
.ah:disabled {
  background-color: #6c757d;
}
.ai:disabled {
  color: #fff;
}
.aj:disabled {
  box-shadow: none;
}
.ak:disabled {
  cursor: not-allowed;
}
.al:disabled {
  filter: alpha(opacity=65);
}
.am:disabled {
  opacity: 0.65;
}
.an:disabled {
  pointer-events: none;
}
.ao:disabled {
  border-top-color: #6c757d;
}
.ap:disabled {
  border-right-color: #6c757d;
}
.aq:disabled {
  border-bottom-color: #6c757d;
}
.ar:disabled {
  border-left-color: #6c757d;
}
.bg {
  border-top-width: 1px;
}
.bh {
  border-right-width: 1px;
}
.bi {
  border-bottom-width: 1px;
}
.bj {
  border-left-width: 1px;
}
.bk {
  border-top-style: solid;
}
.bl {
  border-right-style: solid;
}
.bm {
  border-bottom-style: solid;
}
.bn {
  border-left-style: solid;
}
.bo {
  border-top-color: #6c757d;
}
.bp {
  border-right-color: #6c757d;
}
.bq {
  border-bottom-color: #6c757d;
}
.br {
  border-left-color: #6c757d;
}
.ba:hover {
  background-color: #5c636a;
}
.bb:hover {
  color: #fff;
}
.bc:hover {
  border-top-color: #565e64;
}
.bd:hover {
  border-right-color: #565e64;
}
.be:hover {
  border-bottom-color: #565e64;
}
.bf:hover {
  border-left-color: #565e64;
}
.as:focus-visible {
  color: #fff;
}
.at:focus-visible {
  background-color: #5c636a;
}
.au:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
}
.av:focus-visible {
  outline-width: 0;
}
.aw:focus-visible {
  border-top-color: #565e64;
}
.ax:focus-visible {
  border-right-color: #565e64;
}
.ay:focus-visible {
  border-bottom-color: #565e64;
}
.az:focus-visible {
  border-left-color: #565e64;
}
.w:active {
  color: #fff;
}
.x:active {
  background-color: #565e64;
}
.y:active {
  background-image: none;
}
.z:active {
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
}
.ab:active {
  outline-width: 0;
}
.ac:active {
  border-top-color: #51585e;
}
.ae:active {
  border-right-color: #51585e;
}
.af:active {
  border-bottom-color: #51585e;
}
.ag:active {
  border-left-color: #51585e;
}


<div data-testid="tooltip-trigger">
  <button
    data-testid="button"
    class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br c d e f g h i j k l m n o p q r s t u v w x y z"
  >
    Tooltip
  </button>
</div>
;
"
`;

exports[`components/Tooltip/Tooltip should render an tooltip at right 1`] = `
".a {
  border-top-left-radius: 4px;
}
.b {
  border-top-right-radius: 0;
}
.c {
  border-bottom-right-radius: 0;
}
.d {
  border-bottom-left-radius: 4px;
}
.e {
  padding-top: 6px;
}
.f {
  padding-bottom: 6px;
}
.g {
  padding-left: 12px;
}
.h {
  padding-right: 12px;
}
.i {
  background-color: #6c757d;
}
.j {
  background-image: none;
}
.k {
  color: #fff;
}
.l {
  cursor: pointer;
}
.m {
  display: inline-block;
}
.n {
  font-size: 14px;
}
.o {
  font-weight: 400;
}
.p {
  line-height: 1.42857143;
}
.q {
  margin-bottom: 0;
}
.r {
  text-align: center;
}
.s {
  touch-action: manipulation;
}
.t {
  white-space: nowrap;
}
.u {
  vertical-align: middle;
}
.v {
  user-select: none;
}
.ah:disabled {
  background-color: #6c757d;
}
.ai:disabled {
  color: #fff;
}
.aj:disabled {
  box-shadow: none;
}
.ak:disabled {
  cursor: not-allowed;
}
.al:disabled {
  filter: alpha(opacity=65);
}
.am:disabled {
  opacity: 0.65;
}
.an:disabled {
  pointer-events: none;
}
.ao:disabled {
  border-top-color: #6c757d;
}
.ap:disabled {
  border-right-color: #6c757d;
}
.aq:disabled {
  border-bottom-color: #6c757d;
}
.ar:disabled {
  border-left-color: #6c757d;
}
.bg {
  border-top-width: 1px;
}
.bh {
  border-right-width: 1px;
}
.bi {
  border-bottom-width: 1px;
}
.bj {
  border-left-width: 1px;
}
.bk {
  border-top-style: solid;
}
.bl {
  border-right-style: solid;
}
.bm {
  border-bottom-style: solid;
}
.bn {
  border-left-style: solid;
}
.bo {
  border-top-color: #6c757d;
}
.bp {
  border-right-color: #6c757d;
}
.bq {
  border-bottom-color: #6c757d;
}
.br {
  border-left-color: #6c757d;
}
.ba:hover {
  background-color: #5c636a;
}
.bb:hover {
  color: #fff;
}
.bc:hover {
  border-top-color: #565e64;
}
.bd:hover {
  border-right-color: #565e64;
}
.be:hover {
  border-bottom-color: #565e64;
}
.bf:hover {
  border-left-color: #565e64;
}
.as:focus-visible {
  color: #fff;
}
.at:focus-visible {
  background-color: #5c636a;
}
.au:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
}
.av:focus-visible {
  outline-width: 0;
}
.aw:focus-visible {
  border-top-color: #565e64;
}
.ax:focus-visible {
  border-right-color: #565e64;
}
.ay:focus-visible {
  border-bottom-color: #565e64;
}
.az:focus-visible {
  border-left-color: #565e64;
}
.w:active {
  color: #fff;
}
.x:active {
  background-color: #565e64;
}
.y:active {
  background-image: none;
}
.z:active {
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
}
.ab:active {
  outline-width: 0;
}
.ac:active {
  border-top-color: #51585e;
}
.ae:active {
  border-right-color: #51585e;
}
.af:active {
  border-bottom-color: #51585e;
}
.ag:active {
  border-left-color: #51585e;
}


<div data-testid="tooltip-trigger">
  <button
    data-testid="button"
    class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br c d e f g h i j k l m n o p q r s t u v w x y z"
  >
    Tooltip
  </button>
</div>
;
"
`;

exports[`components/Tooltip/Tooltip should render an tooltip at top 1`] = `
".a {
  border-top-left-radius: 4px;
}
.b {
  border-top-right-radius: 0;
}
.c {
  border-bottom-right-radius: 0;
}
.d {
  border-bottom-left-radius: 4px;
}
.e {
  padding-top: 6px;
}
.f {
  padding-bottom: 6px;
}
.g {
  padding-left: 12px;
}
.h {
  padding-right: 12px;
}
.i {
  background-color: #6c757d;
}
.j {
  background-image: none;
}
.k {
  color: #fff;
}
.l {
  cursor: pointer;
}
.m {
  display: inline-block;
}
.n {
  font-size: 14px;
}
.o {
  font-weight: 400;
}
.p {
  line-height: 1.42857143;
}
.q {
  margin-bottom: 0;
}
.r {
  text-align: center;
}
.s {
  touch-action: manipulation;
}
.t {
  white-space: nowrap;
}
.u {
  vertical-align: middle;
}
.v {
  user-select: none;
}
.ah:disabled {
  background-color: #6c757d;
}
.ai:disabled {
  color: #fff;
}
.aj:disabled {
  box-shadow: none;
}
.ak:disabled {
  cursor: not-allowed;
}
.al:disabled {
  filter: alpha(opacity=65);
}
.am:disabled {
  opacity: 0.65;
}
.an:disabled {
  pointer-events: none;
}
.ao:disabled {
  border-top-color: #6c757d;
}
.ap:disabled {
  border-right-color: #6c757d;
}
.aq:disabled {
  border-bottom-color: #6c757d;
}
.ar:disabled {
  border-left-color: #6c757d;
}
.bg {
  border-top-width: 1px;
}
.bh {
  border-right-width: 1px;
}
.bi {
  border-bottom-width: 1px;
}
.bj {
  border-left-width: 1px;
}
.bk {
  border-top-style: solid;
}
.bl {
  border-right-style: solid;
}
.bm {
  border-bottom-style: solid;
}
.bn {
  border-left-style: solid;
}
.bo {
  border-top-color: #6c757d;
}
.bp {
  border-right-color: #6c757d;
}
.bq {
  border-bottom-color: #6c757d;
}
.br {
  border-left-color: #6c757d;
}
.ba:hover {
  background-color: #5c636a;
}
.bb:hover {
  color: #fff;
}
.bc:hover {
  border-top-color: #565e64;
}
.bd:hover {
  border-right-color: #565e64;
}
.be:hover {
  border-bottom-color: #565e64;
}
.bf:hover {
  border-left-color: #565e64;
}
.as:focus-visible {
  color: #fff;
}
.at:focus-visible {
  background-color: #5c636a;
}
.au:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
}
.av:focus-visible {
  outline-width: 0;
}
.aw:focus-visible {
  border-top-color: #565e64;
}
.ax:focus-visible {
  border-right-color: #565e64;
}
.ay:focus-visible {
  border-bottom-color: #565e64;
}
.az:focus-visible {
  border-left-color: #565e64;
}
.w:active {
  color: #fff;
}
.x:active {
  background-color: #565e64;
}
.y:active {
  background-image: none;
}
.z:active {
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
}
.ab:active {
  outline-width: 0;
}
.ac:active {
  border-top-color: #51585e;
}
.ae:active {
  border-right-color: #51585e;
}
.af:active {
  border-bottom-color: #51585e;
}
.ag:active {
  border-left-color: #51585e;
}


<div data-testid="tooltip-trigger">
  <button
    data-testid="button"
    class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br c d e f g h i j k l m n o p q r s t u v w x y z"
  >
    Tooltip
  </button>
</div>
;
"
`;
